@@ -214,7 +214,7 @@ class MessageCache
 		$this->mMemc->delete( $lockKey );
 	}
 
-	function get( $key, $useDB, $forcontent=true ) {
+	function get( $key, $useDB, $forcontent=true, $isfullkey=false ) {
 		global $wgContLanguageCode;
 		if( $forcontent ) {
 			global $wgContLang;
@@ -237,7 +237,7 @@ class MessageCache
 		$message = false;
 		if( !$this->mDisable && $useDB ) {
 			$title = $lang->ucfirst( $key );
-			if( $langcode != $wgContLanguageCode ) {
+			if(!$isfullkey && ($langcode != $wgContLanguageCode) ) {
 				$title .= '/' . $langcode;
 			}
 
