@@ -1651,6 +1651,9 @@ ta[\'ca-nstab-category\'] = new Array(\'c\',\'View the category page\');
 'variantname-zh-sg' => 'sg',
 'variantname-zh' => 'zh',
 
+# Chinese conversion table
+'zhconversiontable' => '-{}-',
+
 );
 
 #--------------------------------------------------------------------------
